# fantasy

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: Documentation.rst  Example.ipynb  G09_Y1_GS1_080.fit  Tutorial.ipynb  Tutorial_mcmc.ipynb  conf.py  fantasy.rst  fantasy_agn.rst  index.rst  install.rst  modules.rst  requirements.txt  spec-0461-51910-0361.fits  spec-1059-52618-0453.fits
docs/.ipynb_checkpoints/: Tutorial_mcmc-checkpoint.ipynb
docs/_build/doctrees/: Documentation.doctree  Example.doctree  Introduction.doctree  Tutorial.doctree  Untitled.doctree  Untitled1.doctree  environment.pickle  fantasy.doctree  fantasy_agn.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  Documentation.html  Example.html  Introduction.html  Tutorial.html  Tutorial.ipynb  Untitled.html  fantasy.html  fantasy_agn.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/lines/: balmer.csv  broad.csv  coronal.csv  feII_forbidden.csv  feII_model.csv  feii_IZw1.csv  helium.csv  hydrogen.csv  narrow_basic.csv  narrow_plus.csv  oiii_nii.csv  uvfe.csv
examples/: spec-2770-54510-0433.fits
fantasy/: models.py  tools.py
fantasy/input/: helium.csv  narrow_basic.csv  narrow_plus.csv  uvfe.csv
fantasy_agn/: __init__.py  models.py  tools.py
fantasy_agn/input/: balmer.csv  broad.csv  coronal.csv  feII_forbidden.csv  feII_model.csv  feii_IZw1.csv  hydrogen.csv  narrow_basic.csv  narrow_plus.csv  oiii_nii.csv
notebooks/: Introduction.ipynb  Untitled.ipynb
tests/: test_fantasy.py
(+15 files in other folders)
