[tool.poetry]
name = "fantasy_agn"
version = "0.3.0"
description = ""
authors = ["Nemanja <rakinemanja@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
astropy = ">4.3.1"
matplotlib = "3.4.3"
natsort = "8.1.0"
numpy = ">1.20.3"
pandas = "1.3.4"
PyAstronomy = "0.17.1"
RegscorePy = "1.1"
scikit-learn = "1.0.2"
scipy = "^1.8.0"
sfdmap = "0.1.1"
sherpa = "4.14.0"
spectres = "2.1.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
