[tool.poetry]
name = "fantasy_agn"
version = "0.7.0"
description = " FANTASY - Fully Automated pythoN tool for AGN Spectra analYsis, a python based code for simultaneous multi-component fitting of AGN spectra, optimized for the optical rest-frame band (3600-8000A), but also applicable to the UV range (2000-3600A) and NIR range (8000-11000A)."
authors = ["Nemanja <rakinemanja@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
astropy = ">4.3.1"
matplotlib = "3.4.3"
natsort = "8.1.0"
numpy = ">1.21"
pandas = "1.3.4"
PyAstronomy = "0.17.1"
RegscorePy = "1.1"
scikit-learn = "1.0.2"
scipy = "^1.8.0"
sfdmap2 = "0.2.2"
sherpa = ">4.14.0"
spectres = "2.1.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
